// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should only render add-menu for participants 1`] = `
<aside
  class="menu-bars menu-bars--user"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="300"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Mark me as done
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="301"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Raise your hand
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-hand.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        tabindex="302"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Change color scheme
          </span>
        </div>
      </button>
    </div>
  </section>
</aside>
`;

exports[`Menu should render both add- and settings-menu for moderators 1`] = `
<aside
  class="menu-bars menu-bars--user menu-bars--isAdmin"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="300"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Mark me as done
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="301"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Raise your hand
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-hand.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        tabindex="302"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Change color scheme
          </span>
        </div>
      </button>
    </div>
  </section>
  <section
    class="menu admin-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--left"
        tabindex="400"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Timer
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-timer.svg
        </svg>
        <menu
          class="dropdown timer__dropdown"
        >
          <div
            class="dropdown__main"
          >
            <ul>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    1 minute
                  </label>
                  <div>
                    1
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    3 minute
                  </label>
                  <div>
                    3
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    5 minute
                  </label>
                  <div>
                    5
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    Custom time
                  </label>
                  <button
                    class="timer-dropdown__time-button"
                    tabindex="-1"
                  >
                    +
                  </button>
                  <input
                    tabindex="-1"
                    value="10"
                  />
                  <button
                    class="timer-dropdown__time-button"
                    tabindex="-1"
                  >
                    -
                  </button>
                </button>
              </li>
            </ul>
          </div>
        </menu>
      </button>
      <button
        class="menu-item menu-item--left"
        tabindex="408"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Voting
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-vote.svg
        </svg>
        <menu
          class="dropdown vote-dropdown"
        >
          <div
            class="dropdown__main"
          >
            <ul>
              <li
                class="dropdown__item-button vote-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    Allow cumulative voting
                  </label>
                  <div>
                    Yes
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button vote-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    Anonymous voting
                  </label>
                  <div>
                    Yes
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button vote-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    Number of votes
                  </label>
                  <button
                    class="vote-dropdown__vote-button"
                    tabindex="-1"
                  >
                    +
                  </button>
                  <input
                    tabindex="-1"
                    value="5"
                  />
                  <button
                    class="vote-dropdown__vote-button"
                    tabindex="-1"
                  >
                    -
                  </button>
                </button>
              </li>
            </ul>
          </div>
          <div
            class="dropdown__footer"
          >
            <ul>
              <li
                class="dropdown__item-button vote-dropdown__item-button"
              >
                <button
                  tabindex="-1"
                >
                  <label>
                    Start voting phase
                  </label>
                </button>
              </li>
            </ul>
          </div>
        </menu>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--left"
        tabindex="415"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Start focused mode
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-focus.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
    </div>
  </section>
  <button
    class="menu-bars__switch"
  >
    <svg
      class="switch__icon switch__icon--add"
    >
      icon-toggle-add-menu.svg
    </svg>
    <svg
      class="switch__icon switch__icon--settings"
    >
      icon-toggle-settings-menu.svg
    </svg>
  </button>
</aside>
`;
